# Ocaml-Codes

./: 4.4functions.ml  5.1building_Lists.ml  If_expressions.ml  LICENSE  Ocaml_installation.ml  README.md
Chapter-4 The basics of Ocaml/: 4.4.4pipeline_operator.ml  4.4.5polymorphic_fun.ml  4.4.6to7partial_application.ml  4.4.9operator_as_fun.ml  4.4functions.ml  4.5documentation.ml  4.6printing.ml  If_expressions.ml  Ocaml_installation.ml  tempCodeRunnerFile.ml
Chapter-5 Data & Types/: 5.1.2Accessing_lists.ml  5.1.3Not Mutating Lists.ml  5.1building_Lists.ml  5.2Acessing_lists.ml
Chapter-6 Higher-Order Programming/: 6.1high_order.ml  6.2map.ml  6.3filter.ml  6.4fold.ml  6.5beyond_lists.ml  6.6pipelineing.ml  6.7currying.ml  Ch_6Exercises.ml
Chapter-6 Modular Programming/: 5.2module.ml
Chapter-7 Modular Programming/: 7.2module.ml  7.3module_as_toplevel.ml  7.4encapsulation.ml  Ch-7exercises.ml  Practice.ml
Ocaml Lab Codes/: Callender_assignment.ml  Lab11th Dec assignment.ml  card_game_assinment.ml  monad_time_assignment.ml  new.ml  pascal_line_assignent.ml
Ocaml Lab Codes/Dune Project/Dune Lab End Sem/mazesolver/: dune-project
Ocaml Lab Codes/Dune Project/Dune Lab End Sem/mazesolver/lib/: mazesolv.ml  readmaze.ml
Ocaml Lab Codes/Dune Project/Dune Lab End Sem/mazesolver/test/: test_mazesolver.ml
YT Codes/: basic_ocaml.ml  basicfun.ml  exercises.ml  yt-exercises.ml
chapter4/: 1.ml  4.1 types.ml  4.3expression_to _4.3.6.ml  4.6printing.ml  4.7debug.ml  4.9exercises.ml  a.ml  functions.ml  labeled4.4.6.ml  matrix.ml  partial.ml  pipeline4.4.4.ml  tail rec.ml
(+67 files in other folders)
