(lang dune 2.5)

(name mazesolver)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Ujjwal Kamila")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name mazesolver)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
